<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorwhite"
        android:orientation="vertical"
        tools:context=".Activity.Authentication.AuthActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/splash_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/nb_log" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin10"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="@dimen/padding10">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
               >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8">

                    <com.rajinder.noticeboard.Utils.MyTextView
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/btnbackground"
                        android:gravity="center"
                        android:padding="@dimen/padding20"
                        android:text="@string/login"
                        android:textColor="@color/colorwhite"
                        android:textSize="@dimen/btn_txt"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"></LinearLayout>
            </LinearLayout>

            <com.rajinder.noticeboard.Utils.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding10"
                android:text="@string/or"
                android:textColor="@color/hintcolor"
                android:textSize="@dimen/hint_txt" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
               >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8">

                    <com.rajinder.noticeboard.Utils.MyTextView
                        android:id="@+id/signup_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/btnbackground"
                        android:gravity="center"
                        android:padding="@dimen/padding20"
                        android:text="@string/register"
                        android:textColor="@color/colorwhite"
                        android:textSize="@dimen/btn_txt"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"></LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>