<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorwhite"
        tools:context=".Activity.Authentication.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/toolbar"
                    android:background="@color/background"
                    android:layout_marginBottom="@dimen/padding20"/>

                <ImageView
                    android:id="@+id/logo_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding30"
                    android:src="@drawable/noticeboardlogo" />

                <com.rajinder.noticeboard.Utils.MyTextView
                    android:id="@+id/title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo_img"
                    android:gravity="center"
                    android:text="@string/notice_board"
                    android:textColor="@color/colorblack"
                    android:textSize="@dimen/tool_txt"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_txt"
                    android:layout_margin="@dimen/margin10"
                    android:orientation="vertical"
                    android:padding="@dimen/padding20">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_user"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom"
                            android:src="@drawable/svg_user" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/padding10">

                            <com.rajinder.noticeboard.Utils.MyTextView
                                android:layout_marginBottom="@dimen/padding5"
                                android:id="@+id/ltxt1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/useroremail"
                                android:textColor="@color/hintcolor"
                                android:textSize="15dp" />

                            <com.rajinder.noticeboard.Utils.MyEditText
                                android:id="@+id/user_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/ltxt1"
                                android:paddingBottom="@dimen/padding10"
                                android:paddingTop="@dimen/padding10"
                                android:singleLine="true"
                                android:textSize="@dimen/edit_txt"
                                android:textStyle="normal"
                                android:theme="@style/MyEditTextTheme" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom"
                            android:src="@drawable/svg_password" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/padding10">

                            <com.rajinder.noticeboard.Utils.MyTextView
                                android:id="@+id/ltxt2"
                                android:layout_marginBottom="@dimen/padding5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/password"
                                android:textColor="@color/hintcolor"
                                android:textSize="@dimen/hint_txt"
                                android:textStyle="normal" />

                            <com.rajinder.noticeboard.Utils.MyEditText
                                android:id="@+id/password_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/ic_visibility_off"
                                android:inputType="textPassword"
                                android:singleLine="true"
                                android:textSize="@dimen/edit_txt"
                                android:theme="@style/MyEditTextTheme" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/margin10"
                        android:layout_marginBottom="@dimen/margin10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingRight="@dimen/padding10"
                        android:paddingTop="@dimen/padding10">

                        <com.rajinder.noticeboard.Utils.MyCheckBox
                            android:id="@+id/remembercheck"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@drawable/checkbox"
                            android:text="@string/rememberme"
                            android:textColor="@color/hintcolor"
                            android:textSize="@dimen/hint_txt" />

                        <com.rajinder.noticeboard.Utils.MyTextView
                            android:id="@+id/forgot_btn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="right|center"
                            android:text="@string/forgotstr"
                            android:textColor="@color/hintcolor"
                            android:textSize="@dimen/hint_txt" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding20">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".3">
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.8">

                            <com.rajinder.noticeboard.Utils.MyTextView
                                android:id="@+id/login_btn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/btnbackground"
                                android:gravity="center"
                                android:padding="@dimen/padding20"
                                android:text="@string/login"
                                android:textColor="@color/colorwhite"
                                android:textSize="@dimen/btn_txt"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".3">
                        </LinearLayout>

                    </LinearLayout>

                    <com.rajinder.noticeboard.Utils.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/or"
                        android:textColor="@color/hintcolor"
                        android:textSize="@dimen/edit_txt" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding10"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:id="@+id/FrameLayout1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <com.facebook.login.widget.LoginButton
                                android:id="@+id/login_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="gone" />

                            <ImageView
                                android:id="@+id/btn_facebook"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_margin="@dimen/margin10"
                                android:background="@drawable/circlebackgroundlight"
                                android:padding="@dimen/padding22"
                                android:src="@drawable/svg_facebook_letter" />

                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/FrameLayout3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                        <com.google.android.gms.common.SignInButton
                            android:id="@+id/btn_sign_in"
                            android:visibility="gone"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"/>

                            <ImageView
                                android:id="@+id/btn_google"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_margin="@dimen/margin10"
                                android:background="@drawable/circlebackgroundlight"
                                android:padding="@dimen/padding22"
                                android:src="@drawable/svg_google_letter" />

                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/FrameLayout2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                                android:id="@+id/login_twitter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="gone" />

                            <ImageView
                                android:id="@+id/btn_twitter"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_margin="@dimen/margin10"
                                android:background="@drawable/circlebackgroundlight"
                                android:padding="@dimen/padding22"
                                android:src="@drawable/svg_twitter" />

                        </FrameLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>